--- a/content.html
+++ b/content.html
@@ -8,17 +8,14 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/src/css/style.css" />
-    <title>MCE Menú Animado</title>
+    <title>Síguenos en Instagram</title>
   </head>
-  <body class="gold">
-    <section class="info">
-      <img src="/src/img/Gali-Bandera.png" alt="Gali Bandera" />
-      <div>
-        <h2 id="secondary-title">¡Llegamos a</h2>
-        <h1 id="primary-title">La Luna!</h1>
-        <h4 id="dialog">Aunque no quieras creerlo</h4>
-        <p></p>
-      </div>
+  <body class="black">
+    <section class="publication">
+      <a href="https://www.instagram.com/p/B__MHCvha_i/"
+        ><img src="/src/img/Historia.png" alt="Historia"
+      /></a>
+      <h4 id="dialog">Click en la imagen para ver la historia</h4>
     </section>
     <main>
       <section class="menu-wrapper">
