--- a/content.html
+++ b/content.html
@@ -7,21 +7,23 @@
       href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Rubik:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/src/css/style.css" />
+    <link rel="stylesheet" href="src/css/style.css" />
     <title>Síguenos en Instagram</title>
   </head>
   <body class="black">
     <section class="publication">
       <a href="https://www.instagram.com/p/B__MHCvha_i/"
-        ><img src="/src/img/Historia.png" alt="Historia"
+        ><img src="src/img/Historia.png" alt="Historia"
       /></a>
       <h4 id="dialog">Click en la imagen para ver la historia</h4>
     </section>
     <main>
       <section class="menu-wrapper">
-        <span><img src="/src/img/rocket.svg" class="icons" alt="" /></span>
+        <span><img src="src/img/rocket.svg" class="icons" alt="" /></span>
         <div class="menu">
-          <img src="/src/img/logo.png" id="logo" alt="Logo Conejo Estelar" />
+          <a href="/index.html">
+            <img src="src/img/logo.png" id="logo" alt="Logo Conejo Estelar" />
+          </a>
           <p>
             Creamos contenido didáctico y educativo para transmitir el
             conocimiento de forma sencilla y efectiva.
@@ -29,11 +31,11 @@
           <a href="/index.html">Ir a inicio</a>
           <a href="/content.html">Mira la historia</a>
           <div class="social">
-            <a href="https://www.instagram.com/conejoestelar"
-              ><img src="/src/img/instagram.svg" class="icons" alt=""
+            <a href="https://www.instagram.com/conejoestelar" target="blank"
+              ><img src="src/img/instagram.svg" class="icons" alt=""
             /></a>
-            <a href="https://www.instagram.com/conejoestelar"
-              ><img src="/src/img/facebook.svg" class="icons" alt=""
+            <a href="https://www.instagram.com/conejoestelar" target="blank"
+              ><img src="src/img/facebook.svg" class="icons" alt=""
             /></a>
           </div>
           <p>Hecho con 💚 para Platzi Master</p>
