--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
       href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Rubik:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/src/css/style.css" />
+    <link rel="stylesheet" href="src/css/style.css" />
     <title>MCE Menú Animado</title>
   </head>
   <body class="gold">
     <section class="info">
-      <img src="/src/img/Gali-Bandera.png" alt="Gali Bandera" />
+      <img src="src/img/Gali-Bandera.png" alt="Gali Bandera" />
       <div>
         <h2 id="secondary-title">¡Llegamos a</h2>
         <h1 id="primary-title">La Luna!</h1>
@@ -22,9 +22,10 @@
     </section>
     <main>
       <section class="menu-wrapper">
-        <span><img src="/src/img/rocket.svg" class="icons" alt="" /></span>
+        <span><img src="src/img/rocket.svg" class="icons" alt="" /></span>
         <div class="menu">
-          <img src="/src/img/logo.png" id="logo" alt="Logo Conejo Estelar" />
+          <a href="/index.html"></a>
+          <img src="src/img/logo.png" id="logo" alt="Logo Conejo Estelar" />
           <p>
             Creamos contenido didáctico y educativo para transmitir el
             conocimiento de forma sencilla y efectiva.
@@ -32,11 +33,11 @@
           <a href="/index.html">Ir a inicio</a>
           <a href="/content.html">Mira la historia</a>
           <div class="social">
-            <a href="https://www.instagram.com/conejoestelar"
-              ><img src="/src/img/instagram.svg" class="icons" alt=""
+            <a href="https://www.instagram.com/conejoestelar" target="blank"
+              ><img src="src/img/instagram.svg" class="icons" alt=""
             /></a>
-            <a href="https://www.instagram.com/conejoestelar"
-              ><img src="/src/img/facebook.svg" class="icons" alt=""
+            <a href="https://www.instagram.com/conejoestelar" target="blank"
+              ><img src="src/img/facebook.svg" class="icons" alt=""
             /></a>
           </div>
           <p>Hecho con 💚 para Platzi Master</p>
