--- a/content.html
+++ b/content.html
@@ -21,15 +21,20 @@
       <section class="menu-wrapper">
         <span><img src="src/img/rocket.svg" class="icons" alt="" /></span>
         <div class="menu">
-          <a href="/index.html">
+          <a href="https://hectordevx.github.io/mce-menu-animation//index.html">
             <img src="src/img/logo.png" id="logo" alt="Logo Conejo Estelar" />
           </a>
           <p>
             Creamos contenido didáctico y educativo para transmitir el
             conocimiento de forma sencilla y efectiva.
           </p>
-          <a href="/index.html">Ir a inicio</a>
-          <a href="/content.html">Mira la historia</a>
+          <a href="https://hectordevx.github.io/mce-menu-animation//index.html"
+            >Ir a inicio</a
+          >
+          <a
+            href="https://hectordevx.github.io/mce-menu-animation//content.html"
+            >Mira la historia</a
+          >
           <div class="social">
             <a href="https://www.instagram.com/conejoestelar" target="blank"
               ><img src="src/img/instagram.svg" class="icons" alt=""
